@@ -1,3 +1,12 @@
+Fri Nov  6 18:07:47 2015  Naohisa Goto  <ngotogenome@gmail.com>
+
+	* include/ruby/ruby.h (rb_array_const_ptr, rb_struct_const_ptr):
+	  Suppress pointer type mismatch warnings occurred with old version
+	  of Fujitsu C Compiler (fcc) on Solaris 10. The warnings cause
+	  failure of TestMkmf::TestConvertible. [Bug #11644] [ruby-dev:49326]
+	* include/ruby/ruby.h (FIX_CONST_VALUE_PTR): macro for the above,
+	  only effective with fcc.
+
 Fri Nov  6 12:39:21 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* defs/id.def (token_ops), parse.y (parser_yylex): change DOTQ
